unpackaged/main/default/objects/litify_docs__File_History__c/litify_docs__File_History__c.object-meta.xml
<CustomObject>
    <label>File History</label>
    <nameField>
        <displayFormat>HISTORY-{0000000000}</displayFormat>
        <label>File History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>