unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__Action__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced PDF Edit</fullName>
            </value>
            <value>
                <fullName>AI in Progress</fullName>
            </value>
            <value>
                <fullName>AI Processed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Downloaded</fullName>
            </value>
            <value>
                <fullName>Live Edit</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Copied</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Versioned</fullName>
            </value>
            <value>
                <fullName>External Link Created</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Checked Out</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Restored</fullName>
            </value>
            <value>
                <fullName>Shared with Portal</fullName>
            </value>
            <value>
                <fullName>Removed from Portal</fullName>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>