unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__Date__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>