unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__Destination_File_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Destination_File_Name__c</fullName>
    <description>The name of the file the action was used to create from</description>
    <externalId>true</externalId>
    <label>Destination File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>