unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__File_Info__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Info</label>
    <referenceTo>litify_docs__File_Info__c</referenceTo>
    <relationshipLabel>File History</relationshipLabel>
    <relationshipName>File_History</relationshipName>
    <type>Lookup</type>
</CustomField>