unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__New_Related_To__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__New_Related_To__c</fullName>
    <description>The new value for the Related To field on the File Info SObject for the actioned record.</description>
    <label>New Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>