unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__Source_File_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Source_File_Version_Number__c</fullName>
    <description>The version number of the file that was used to create a new file</description>
    <label>Source File Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>