unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__User__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_History</relationshipName>
    <type>Lookup</type>
</CustomField>