unpackaged/main/default/objects/litify_docs__File_History__c/fields/litify_docs__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Version_Number__c</fullName>
    <description>The version number of the actioned File Info record.</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>